--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -114,10 +114,11 @@
               </p>
               <p class="item-content">
                 <i>Preprint. Under review. Accepted at <a href="https://ai4sciencecommunity.github.io/" target="_blank"
-                       class="link-style-green">NeurIPS'21 AI4S</a>, <a href="https://ml4physicalsciences.github.io/2021/" target="_blank"
-                       class="link-style-green">NeurIPS'21 ML4PH</a> and  <a class="item-subtitle link-style-black"
-                       href="https://sslneurips21.github.io/"
-                                                                   target="_blank">NeurIPS'21 SSL</a> workshops.</i>
+                                                          class="link-style-green">NeurIPS'21 AI4S</a>, <a
+                  href="https://ml4physicalsciences.github.io/2021/" target="_blank"
+                  class="link-style-green">NeurIPS'21 ML4PH</a> and <a class="item-subtitle link-style-black"
+                                                                       href="https://sslneurips21.github.io/"
+                                                                       target="_blank">NeurIPS'21 SSL</a> workshops.</i>
               </p>
               <div fxLayout="column" fxLayoutGap="5px">
                 <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center">
@@ -148,7 +149,7 @@
 
                     <fa-icon class="icon-right-margin--left" [icon]="book"></fa-icon>
                     <i>Preprint. Under review. Also accepted at <a class="item-subtitle link-style-black"
-                       href="https://sslneurips21.github.io/"
+                                                                   href="https://sslneurips21.github.io/"
                                                                    target="_blank">NeurIPS'21 SSL Workshop</a>.</i>
                   </p>
 
@@ -245,9 +246,10 @@
                   </a>
                 </p>
                 <p class="item-content">
-                  Passed with high distinction (GPA 1.2) - No corrections for <a href="https://hannes-stark.com/assets/Hannes_Thesis.pdf"
-                                                  target="_blank"
-                                                  class="link-style-green">thesis</a> on graph representation learning for molecules<br>
+                  Passed with high distinction (GPA 1.2) - No corrections for <a
+                  href="https://hannes-stark.com/assets/Hannes_Thesis.pdf"
+                  target="_blank"
+                  class="link-style-green">thesis</a> on graph representation learning for molecules<br>
                   • 2nd Year: Advanced topics in machine learning and probabilistic inference<br>
                   • 1st Year: Introduction to machine learning and learning theory<br>
                   Attending the
@@ -562,8 +564,8 @@
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                   <p class="item-content">
                     Strong student award at <a class="item-subtitle link-style-black"
-                                                    href="http://mlss.cc/"
-                                                    target="_blank">
+                                               href="http://mlss.cc/"
+                                               target="_blank">
                     MLSS 2021</a>
                   </p>
                 </div>
@@ -603,6 +605,56 @@
             <div fxFlex="60">
               <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
 
+
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black" href="https://cortex.twitter.com/en/research-publications/publications.html#graph-learning"
+                         target="_blank">
+                        Twitter Research</a></h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    Jan 2022:
+                    Upcoming talk. Invited by Fabrizio Frasca.
+                  </p>
+                  <p class="item-content">
+                  </p>
+                </div>
+                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black" href="https://www.meetup.com/Hong-Kong-Machine-Learning-Meetup/"
+                         target="_blank">
+                        Hong Kong Machine Learning Meetup</a></h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    Dec 2021:
+                  Invited talk about graph neural networks for molecules.
+                  </p>
+                  <p class="item-content">
+                  </p>
+                </div>
+                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
+                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black" href="https://www.tum.de/en/"
+                         target="_blank">
+                        Technical University of Munich</a></h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    Nov 2021:
+                    Two guest lectures about protein prediction for biology and computer science students. Host: Prof.
+                    Burkhard Rost.
+                  </p>
+                  <p class="item-content">
+                  </p>
+                </div>
+                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                   <div fxLayout="row">
                     <h3>
@@ -613,8 +665,9 @@
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                     Oct 2021:
-                  AI Research Seminar hosted by Prof. <a class="item-subtitle link-style-black" href="https://www.cl.cam.ac.uk/~mj201/"
-                                                         target="_blank">Mateja Jamnik</a>.
+                    AI Research Seminar hosted by Prof. <a class="item-subtitle link-style-black"
+                                                           href="https://www.cl.cam.ac.uk/~mj201/"
+                                                           target="_blank">Mateja Jamnik</a>.
                   </p>
                   <p class="item-content">
                   </p>
@@ -623,7 +676,8 @@
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                   <div fxLayout="row">
                     <h3>
-                      <a class="item-subtitle link-style-black" href="https://www.valencediscovery.com/" target="_blank">
+                      <a class="item-subtitle link-style-black" href="https://www.valencediscovery.com/"
+                         target="_blank">
                         Valence Discovery</a></h3>
                   </div>
                   <p class="item-date-loc">
@@ -644,7 +698,7 @@
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                     July 2021:
-                      Contributed talk for top 4 paper
+                    Contributed talk for top 4 paper
                   </p>
 
                 </div>
@@ -659,7 +713,7 @@
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                     July 2021:
-                      Presented a "Long Talk" on representation learning
+                    Presented a "Long Talk" on representation learning
                   </p>
                 </div>
                 <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
@@ -673,7 +727,7 @@
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                     July 2021:
-                      Talk on protein localization hosted by Dr. Christian Dallago
+                    Talk on protein localization hosted by Dr. Christian Dallago
                   </p>
                 </div>
                 <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
@@ -687,7 +741,7 @@
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                     May 2021:
-                      Contributed talk for top paper at workshop
+                    Contributed talk for top paper at workshop
                   </p>
                 </div>
 
