--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -113,12 +113,14 @@
 
               </p>
               <p class="item-content">
-                <i>Preprint. Under review. Accepted at <a href="https://ai4sciencecommunity.github.io/" target="_blank"
+                <i>Under review. Also accepted at <a href="https://ai4sciencecommunity.github.io/" target="_blank"
                                                           class="link-style-green">NeurIPS'21 AI4S</a>, <a
                   href="https://ml4physicalsciences.github.io/2021/" target="_blank"
                   class="link-style-green">NeurIPS'21 ML4PH</a> and <a class="item-subtitle link-style-black"
                                                                        href="https://sslneurips21.github.io/"
-                                                                       target="_blank">NeurIPS'21 SSL</a> workshops.</i>
+                                                                       target="_blank">NeurIPS'21 SSL</a> workshops and  <a class="item-subtitle link-style-black"
+                                                                       href="https://moleculediscovery.github.io/workshop2021/"
+                                                                                                                                 target="_blank">ELLIS ML4Molecules.</a></i>
               </p>
               <div fxLayout="column" fxLayoutGap="5px">
                 <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center">
@@ -148,9 +150,9 @@
                     Z. Kefato, S. Girdzijauskas, H. Stärk
 
                     <fa-icon class="icon-right-margin--left" [icon]="book"></fa-icon>
-                    <i>Preprint. Under review. Also accepted at <a class="item-subtitle link-style-black"
+                    <i>Under review. Also accepted at <a class="item-subtitle link-style-black"
                                                                    href="https://sslneurips21.github.io/"
-                                                                   target="_blank">NeurIPS'21 SSL Workshop</a>.</i>
+                                                                   target="_blank">NeurIPS'21 SSL workshop.</a></i>
                   </p>
 
                 </div>
@@ -161,7 +163,7 @@
                 <div fxLayout="row">
                   <h3>
                     <a class="item-subtitle link-style-black"
-                       href="https://academic.oup.com/bioinformaticsadvances/advance-article/doi/10.1093/bioadv/vbab035/6432029"
+                       href="https://doi.org/10.1093/bioadv/vbab035"
                        target="_blank">Light Attention Predicts Protein Location from the Language of Life</a></h3>
                 </div>
                 <p class="item-date-loc">
@@ -171,7 +173,7 @@
                 <p class="item-content">
                   <i>In:
                     <a href="https://academic.oup.com/bioinformaticsadvances" target="_blank"
-                       class="link-style-green">OUP Bioinformatics Advances</a>.
+                       class="link-style-green">Bioinformatics Advances</a>.
                     Poster and talks at
                     <a href="https://icml-compbio.github.io/" target="_blank"
                        class="link-style-green">ICML'21 WCB</a>,
@@ -246,7 +248,7 @@
                   </a>
                 </p>
                 <p class="item-content">
-                  Passed with high distinction (GPA 1.2) - No corrections for <a
+                  Passed with high distinction (1.2) - No corrections for <a
                   href="https://hannes-stark.com/assets/Hannes_Thesis.pdf"
                   target="_blank"
                   class="link-style-green">thesis</a> on graph representation learning for molecules<br>
@@ -605,38 +607,57 @@
             <div fxFlex="60">
               <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
 
-
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                   <div fxLayout="row">
                     <h3>
-                      <a class="item-subtitle link-style-black" href="https://cortex.twitter.com/en/research-publications/publications.html#graph-learning"
+                      <a class="item-subtitle link-style-black"
+                         href="https://valence-discovery.github.io/M2D2-meetings/"
+                         target="_blank">
+                        Mila - Quebec AI Institute</a></h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    Dec 2021:
+                    Upcoming talk. Invited by Dr. Prudencio Tossou.
+                  </p>
+                  <p class="item-content">
+                  </p>
+                </div>
+                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black"
+                         href="https://cortex.twitter.com/en/research-publications/publications.html#graph-learning"
                          target="_blank">
                         Twitter Research</a></h3>
                   </div>
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                    Jan 2022:
+                    Dec 2021:
                     Upcoming talk. Invited by Fabrizio Frasca.
                   </p>
                   <p class="item-content">
                   </p>
                 </div>
-                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                   <div fxLayout="row">
                     <h3>
-                      <a class="item-subtitle link-style-black" href="https://www.meetup.com/Hong-Kong-Machine-Learning-Meetup/"
+                      <a class="item-subtitle link-style-black"
+                         href="https://www.meetup.com/Hong-Kong-Machine-Learning-Meetup/"
                          target="_blank">
                         Hong Kong Machine Learning Meetup</a></h3>
                   </div>
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                     Dec 2021:
-                  Invited talk about graph neural networks for molecules.
+                    Invited talk about graph neural networks for molecules.
                   </p>
                   <p class="item-content">
                   </p>
                 </div>
-                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
+
                 <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                   <div fxLayout="row">
