--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -218,92 +218,6 @@
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
-                <a class="item-subtitle">
-                  NeurIPS GraphML orientation session!
-                </a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                7th of December 2021
-              </div>
-
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">What we will do:</a>
-
-              The first NeurIPS poster session is on Tuesday Dec 7th at 4:30pm UTC - 30 minutes after our reading group
-              starts. I decided to have a meeting for the 30 minutes before the first poster session starts, but we
-              won't be covering a paper.<br>
-              Instead, we will have a "NeurIPS GraphML orientation session"!<br>
-
-              We share with each other what GraphML/GeometricDL papers to look out for and share recommendations for
-              what poster presentations to visit!
-              Then, at 4:30pm UTC, you can jump onto the NeurIPS GatherTown and visit the GraphML poster presentations
-              that interest you the most.<br>
-              I hope that will help us get the most out of NeurIPS and I am curious to hear what your favorite NeurIPS
-              GraphML paper is, so come with a recommendation on Dec 7th!
-            </p>
-          </div>
-
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.02910"
-                   target="_blank">
-                  Equivariant Subgraph Aggregation Networks (2021)
-                </a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                14th of December 2021
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Beatrice Bevilacqua, Fabrizio Frasca, Derek Lim, Balasubramaniam Srinivasan, Chen Cai, Gopinath
-                  Balamurugan, Michael M. Bronstein, Haggai Maron
-                </a>
-              </div>
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">Speakers:</a>
-              Joint first authors <a class="item-subtitle link-style-black" href="https://www.linkedin.com/in/beabevi/"
-                                     target="_blank">Beatrice Bevilacqua</a>, <a class="item-subtitle link-style-black"
-                                                                                 href="https://scholar.google.com/citations?user=PT2CDA4AAAAJ&hl=en"
-                                                                                 target="_blank">Fabrizio Frasca</a>,
-              and <a class="item-subtitle link-style-black" href="https://cptq.github.io/"
-                     target="_blank">Derek Lim</a>. Beatrice is a PhD Student at
-              Purdue University with Prof. Bruno Ribeiro. Fabrizio is a PhD candidate at Imperial College London
-              supervised by Prof. Michael Bronstein and he works as an ML researcher at Twitter. Derek is a PhD student
-              at MIT under the supervision of Prof. Stefanie Jegelka.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              Message-passing neural networks (MPNNs) are the leading architecture for deep learning on graph-structured
-              data, in large part due to their simplicity and scalability. Unfortunately, it was shown that these
-              architectures are limited in their expressive power. This paper proposes a novel framework called
-              Equivariant Subgraph Aggregation Networks (ESAN) to address this issue. Our main observation is that while
-              two graphs may not be distinguishable by an MPNN, they often contain distinguishable subgraphs. Thus, we
-              propose to represent each graph as a set of subgraphs derived by some predefined policy, and to process it
-              using a suitable equivariant architecture. We develop novel variants of the 1-dimensional Weisfeiler-Leman
-              (1-WL) test for graph isomorphism, and prove lower bounds on the expressiveness of ESAN in terms of these
-              new WL variants. We further prove that our approach increases the expressive power of both MPNNs and more
-              expressive architectures. Moreover, we provide theoretical results that describe how design choices such
-              as the subgraph selection policy and equivariant neural architecture affect our architecture's expressive
-              power. To deal with the increased computational cost, we propose a subgraph sampling scheme, which can be
-              viewed as a stochastic version of our framework. A comprehensive set of experiments on real and synthetic
-              datasets demonstrates that our framework improves the expressive power and overall performance of popular
-              GNN architectures.
-            </p>
-          </div>
-
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
                 <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.04624"
                    target="_blank">
                   Iterative Refinement Graph Neural Network for Antibody Sequence-Structure Co-design (2021)
@@ -533,6 +447,53 @@
             </p>
           </div>
 
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2111.14522"
+                   target="_blank">
+                  Understanding over-squashing and bottlenecks on graphs via curvature (2021)
+                </a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                1st of February 2022
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Jake Topping, Francesco Di Giovanni, Benjamin Paul Chamberlain, Xiaowen Dong, Michael M. Bronstein
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Jake Topping, <a class="item-subtitle link-style-black"
+                               href="https://scholar.google.com/citations?user=yzjjeqsAAAAJ&hl=en"
+                               target="_blank">Francesco Di Giovanni</a>, and Dr. <a
+              class="item-subtitle link-style-black"
+              href="https://www.linkedin.com/in/benjaminchamberlain/"
+              target="_blank">Benjamin
+              Paul Chamberlain</a>. Jake is a PhD student at Oxford working with Prof. Xiaowen Dong and Prof. Michael
+              Bronstein. Francesco is doing his PhD at University College London and Ben is a Machine Learning
+              Researcher at Twitter who received his PhD from Imperial College London.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Most graph neural networks (GNNs) use the message passing paradigm, in which node features are propagated
+              on the input graph. Recent works pointed to the distortion of information flowing from distant nodes as a
+              factor limiting the efficiency of message passing for tasks relying on long-distance interactions. This
+              phenomenon, referred to as 'over-squashing', has been heuristically attributed to graph bottlenecks where
+              the number of k-hop neighbors grows rapidly with k. We provide a precise description of the over-squashing
+              phenomenon in GNNs and analyze how it arises from bottlenecks in the graph. For this purpose, we introduce
+              a new edge-based combinatorial curvature and prove that negatively curved edges are responsible for the
+              over-squashing issue. We also propose and experimentally test a curvature-based graph rewiring method to
+              alleviate the over-squashing.
+            </p>
+          </div>
+
 
         </div>
         <div fxFlex="10" fxFlex.xs="2"></div>
@@ -554,6 +515,69 @@
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
+
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.02910"
+                   target="_blank">
+                  Equivariant Subgraph Aggregation Networks (2021)
+                </a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                14th of December 2021
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Beatrice Bevilacqua, Fabrizio Frasca, Derek Lim, Balasubramaniam Srinivasan, Chen Cai, Gopinath
+                  Balamurugan, Michael M. Bronstein, Haggai Maron
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Resources:</a>
+              Their
+              <a href="https://hannes-stark.com/assets/ESAN_Reading_Group_Slides.pdf"
+                 target="_blank"
+                 class="link-style-green">slides</a>.
+              (35 participants)
+            </p>
+            <p class="paragraph">
+              <a class="slight-bold">Speakers:</a>
+              Joint first authors <a class="item-subtitle link-style-black" href="https://www.linkedin.com/in/beabevi/"
+                                     target="_blank">Beatrice Bevilacqua</a>, <a class="item-subtitle link-style-black"
+                                                                                 href="https://scholar.google.com/citations?user=PT2CDA4AAAAJ&hl=en"
+                                                                                 target="_blank">Fabrizio Frasca</a>,
+              and <a class="item-subtitle link-style-black" href="https://cptq.github.io/"
+                     target="_blank">Derek Lim</a>. Beatrice is a PhD Student at
+              Purdue University with Prof. Bruno Ribeiro. Fabrizio is a PhD candidate at Imperial College London
+              supervised by Prof. Michael Bronstein and he works as an ML researcher at Twitter. Derek is a PhD student
+              at MIT under the supervision of Prof. Stefanie Jegelka.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Message-passing neural networks (MPNNs) are the leading architecture for deep learning on graph-structured
+              data, in large part due to their simplicity and scalability. Unfortunately, it was shown that these
+              architectures are limited in their expressive power. This paper proposes a novel framework called
+              Equivariant Subgraph Aggregation Networks (ESAN) to address this issue. Our main observation is that while
+              two graphs may not be distinguishable by an MPNN, they often contain distinguishable subgraphs. Thus, we
+              propose to represent each graph as a set of subgraphs derived by some predefined policy, and to process it
+              using a suitable equivariant architecture. We develop novel variants of the 1-dimensional Weisfeiler-Leman
+              (1-WL) test for graph isomorphism, and prove lower bounds on the expressiveness of ESAN in terms of these
+              new WL variants. We further prove that our approach increases the expressive power of both MPNNs and more
+              expressive architectures. Moreover, we provide theoretical results that describe how design choices such
+              as the subgraph selection policy and equivariant neural architecture affect our architecture's expressive
+              power. To deal with the increased computational cost, we propose a subgraph sampling scheme, which can be
+              viewed as a stochastic version of our framework. A comprehensive set of experiments on real and synthetic
+              datasets demonstrates that our framework improves the expressive power and overall performance of popular
+              GNN architectures.
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
           <div class="item" fxLayout="column">
             <div fxLayout="row">
