--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -287,20 +287,49 @@
           <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
           <div class="item" fxLayout="column">
             <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2106.06935"
+                   target="_blank">
+                  Neural Bellman-Ford Networks: A General Graph Neural Network Framework for Link Prediction (2021)
+                </a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 4th of January 2022
               </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Zhaocheng Zhu, Zuobai Zhang, Louis-Pascal Xhonneux, Jian Tang
+                </a>
+              </div>
             </div>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
-              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
-              interested in presenting his work then just write me a message on
-              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
-                 class="link-style-green">Slack</a>
-              or somewhere else!
+              First author <a class="item-subtitle link-style-black"
+                              href="https://danielegrattarola.github.io/"
+                              target="_blank">Zhaocheng Zhu</a>, who is a third-year Ph.D.
+              candidate at Mila - Quebec AI Institute, University of Montreal, advised by Prof. Jian Tang. He works on
+              graph representation learning, machine learning systems, and drug discovery.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Link prediction is a very fundamental task on graphs. Inspired by traditional path-based methods, in this
+              paper we propose a general and flexible representation learning framework based on paths for link
+              prediction. Specifically, we define the representation of a pair of nodes as the generalized sum of all
+              path representations, with each path representation as the generalized product of the edge representations
+              in the path. Motivated by the Bellman-Ford algorithm for solving the shortest path problem, we show that
+              the proposed path formulation can be efficiently solved by the generalized Bellman-Ford algorithm. To
+              further improve the capacity of the path formulation, we propose the Neural Bellman-Ford Network (NBFNet),
+              a general graph neural network framework that solves the path formulation with learned operators in the
+              generalized Bellman-Ford algorithm. The NBFNet parameterizes the generalized Bellman-Ford algorithm with 3
+              neural components, namely INDICATOR, MESSAGE and AGGREGATE functions, which corresponds to the boundary
+              condition, multiplication operator, and summation operator respectively. The NBFNet is very general,
+              covers many traditional path-based methods, and can be applied to both homogeneous graphs and
+              multi-relational graphs (e.g., knowledge graphs) in both transductive and inductive settings. Experiments
+              on both homogeneous graphs and knowledge graphs show that the proposed NBFNet outperforms existing methods
+              by a large margin in both transductive and inductive settings, achieving new state-of-the-art results.
             </p>
           </div>
 
@@ -329,8 +358,12 @@
               <a class="slight-bold">Speaker:</a>
               First author of the paper Dr. <a class="item-subtitle link-style-black"
                                                href="https://danielegrattarola.github.io/"
-                                               target="_blank">Daniele Grattarola</a> who obtained his PhD working in
-              Graph Machine Learning Group at the Università della Svizzera Italiana in 2021.
+                                               target="_blank">Daniele Grattarola</a> who is a post-doc researcher at
+              EPFL, working in collaboration with A. Loukas, B. Correia, P. Vandergheynst and M. Bronstein. He obtained
+              his PhD working in
+              Graph Machine Learning Group at the Università della Svizzera Italiana in 2021. His research is on graph
+              neural networks and their applications to dynamical systems and computational biology, specifically for
+              protein design.
             </p>
             <p class="no-margin">
               <a class="slight-bold">Abstract:</a>
@@ -470,15 +503,15 @@
             </div>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
-              Jake Topping, <a class="item-subtitle link-style-black"
-                               href="https://scholar.google.com/citations?user=yzjjeqsAAAAJ&hl=en"
-                               target="_blank">Francesco Di Giovanni</a>, and Dr. <a
+              Jake Topping, Dr. <a class="item-subtitle link-style-black"
+                                   href="https://scholar.google.com/citations?user=yzjjeqsAAAAJ&hl=en"
+                                   target="_blank">Francesco Di Giovanni</a>, and Dr. <a
               class="item-subtitle link-style-black"
               href="https://www.linkedin.com/in/benjaminchamberlain/"
               target="_blank">Benjamin
               Paul Chamberlain</a>. Jake is a PhD student at Oxford working with Prof. Xiaowen Dong and Prof. Michael
-              Bronstein. Francesco is doing his PhD at University College London and Ben is a Machine Learning
-              Researcher at Twitter who received his PhD from Imperial College London.
+              Bronstein. Francesco obtained his PhD from University College London and is working together with Ben at
+              Twitter Research. Ben received his PhD from Imperial College London.
             </p>
             <p class="no-margin">
               <a class="slight-bold">Abstract:</a>
